Add buttons and images to the second section of the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="nav-logo-menu">
-                    <h1><a href="/">ADVENTURE</a></h1>
+                    <h1><a href="index.html">ADVENTURE</a></h1>
                 </div>
             </div>
             <div class="col-md-6">
@@ -36,6 +36,33 @@
         </div>
     </div>
 </header>
+<div class="second-part">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="first-orange-box">
+                </div>
+                <div class="mountain-div-1">
+                    <img src="img/mountainhiking1.jpg" alt="first-picture">
+                </div>
+                <div class="second-orange-box">
+                    <div class="second-orange-box-text"><p>01</p></div>
+                </div>
+                <div class="third-orange-box">
+                    <div class="third-orange-box-text-title"><p>Mountain<br>Hiking Tours</p></div>
+                    <div class="third-orange-box-text-text"><p>Travel with us to the mountains of Europe, South America,
+                        Japan, and the United States.<br>Enjoy a choice of guided day hikes and evenings spent in
+                        comfortable accommodations.<br>Join us for a mountain hiking adventure tour amidst the world’s
+                        most thrilling landscapes! </p></div>
+                    <button class="button button1">Start Now</button>
+                </div>
+                <div class="arrow-right"></div>
+                <div class="arrow-left"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
