--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 </header>
 <div class="second-part">
     <div class="container">
-
         <div class="row">
             <div class="col-md-12">
                 <div class="first-orange-box">
@@ -57,13 +56,37 @@
                         most thrilling landscapes! </p></div>
                     <button class="button button1">Start Now</button>
                 </div>
+                <div class="next-arrow"></div>
+                <div class="prev-arrow"></div>
             </div>
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<div class="third-part">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="tours-logo1">
+                    <img src="img/mountain-badge.webp" alt="badges">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="tours-logo2">
+                    <img src="img/mountain-badge.webp" alt="badges">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="tours-logo3">
+                    <img src="img/mountain-badge.webp" alt="badges">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
