Do the fourth chapter

--- a/index.html
+++ b/index.html
@@ -69,24 +69,61 @@
                 <div class="tours-logo1">
                     <img src="img/mountain-badge.webp" alt="badges">
                 </div>
+                <div class="tours-text"><p>TOURS</p></div>
+                <div class="tours-text-lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Alias
+                    aliquid
+                    aut dignissimos dolor enim facilis illum ipsa<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;iusto
+                    laudantium molestiae Iste, quidem!
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="tours-logo2">
                     <img src="img/mountain-badge.webp" alt="badges">
+                </div>
+                <div class="tours-text2"><p>ADVENTURE</p></div>
+                <div class="tours-text-lorem2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Alias
+                    aliquid
+                    aut dignissimos dolor enim facilis illum ipsa<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;iusto
+                    laudantium molestiae Iste, quidem!
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="tours-logo3">
                     <img src="img/mountain-badge.webp" alt="badges">
                 </div>
+                <div class="tours-text3"><p>GALLERY</p></div>
+                <div class="tours-text-lorem3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Alias
+                    aliquid
+                    aut dignissimos dolor enim facilis illum ipsa<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;iusto
+                    laudantium molestiae Iste, quidem!
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+<div class="fourth-part">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="fourth-first-orange-box">
+                    <img src="img/canada.jpg" alt="canada">
+                </div>
+                <div class="winter-image">
+                    <img src="img/winter-walk.jpg" alt="winter">
+                </div>
+                <div class="text-over-winter-walk"><p>NATURE &<br>ADVENTURE<br>TOURS AND TRIPS</p></div>
+                <div class="third-winter">
+                    <img src="img/third-winter.jpg" alt="third-winter">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
