Do the fourth chapter

--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
                 <div class="text-over-winter-walk"><p>NATURE &<br>ADVENTURE<br>TOURS AND TRIPS</p></div>
                 <div class="third-winter">
                     <img src="img/third-winter.jpg" alt="third-winter">
+                    <p>Mountain Adventure<br>is a Trekking & Tour<br>company</p>
+                </div>
+                <div class="vertical-orange-board">
+                </div>
+                <div class="text-under-vertical-orange-board">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi asperiores perferendis
+                    ratione voluptates!<br> Ad consectetur incidunt nulla optio quas quasi quod sint tempora voluptates.
+                    Culpa eligendi id iure tempora. <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
+                    atque, culpa cum dolorem, dolores enim ipsam<br> laboriosam laborum magni maxime mollitia natus
+                    numquam odit pariatur quas quidem, rem sapiente unde.
+                </div>
+                <div class="learn-more-1">
+                    <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
