--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
     </div>
 </div>
 
+<div class="fifth-part">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="vertical-black-board">
+                </div>
+                <p class="creativity-in-touch">Creativity in touch</p>
+                <p class="creativity-in-touch-lorem-ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aspernatur atque autem<br>cumque doloremque excepturi maiores maxime, obcaecati odio repellendus
+                    similique!<br> Accusamus aliquam aliquid dicta earum id, laudantium officiis porro vel.<br>cumque
+                    doloremque excepturi maiores maxime, obcaecati odio repellendus similique!</p>
+            <p class="travel"><b>T<br>R<br>A<br>V<br>E<br>L</b></p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
