--- a/index.html
+++ b/index.html
@@ -145,12 +145,121 @@
                     Aspernatur atque autem<br>cumque doloremque excepturi maiores maxime, obcaecati odio repellendus
                     similique!<br> Accusamus aliquam aliquid dicta earum id, laudantium officiis porro vel.<br>cumque
                     doloremque excepturi maiores maxime, obcaecati odio repellendus similique!</p>
-            <p class="travel"><b>T<br>R<br>A<br>V<br>E<br>L</b></p>
+                <p class="travel"><b>T<br>R<br>A<br>V<br>E<br>L</b></p>
+                <div class="right-winter">
+                    <img src="img/right-winter.jpg" alt="right-winter">
+                </div>
+                <div class="travel-winter-orange-box">
+                </div>
+                <div class="left-winter">
+                    <img src="img/middle-winteer.jpg" alt="middle-winter">
+                </div>
+                <div class="middle-winter">
+                    <img src="img/left-winter.jpg" alt="left-winter">
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+<div class="6th-part">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="left-text-6th-part">
+                    <p class="title-text-6th">BEST PLACES TO HIKE AND<br>TREK IN THE WORLD</p>
+                    <p class="title-text-6th-under">If you're an adventurer who loves<br>
+                        being out in nature a hiking and<br>
+                        trekking tour should be next on your<br>
+                        ist. You can expect great wilde<br>
+                        photography opportunities and the<br>
+                        chance to travel with a group of ke<br>
+                        minded individuals who love the great<br></p>
+                    <p class="title-text-6th-under-right">Etiam et nunc scelerisque venenatis<br>
+                        turpis quis, tempor nunc. Nunc in<br>
+                        bibendum arcu. Nulla sed ve voni<br>
+                        imperdiet ex sollicitudin scelerisque<br>
+                        Maecenas et ligula enim integer<br>
+                        pretium metus ac fringilla congue<br>
+                        mauris diam faucibus leo, quis omare<br>
+                        enim. Sed portor consequat massa<br>
+                        in volutpat dui tristique non in ectum<br>
+                        rhoncus tortor fermentum</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="7th part">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="vertical-black-board-2">
+                </div>
+                <div class="finale">
+                    <p class="title-adventure-trips">ADVENTURE TOURS & TRIPS</p>
+                    <p class="title-adventure-trips-text">Whether your middle name is adrenaline or you're just trying
+                        out<br>
+                        adventure travel for the first time. Tounkadar has adrenaline<br>
+                        inducing tours for everyone from solo trips to family adventure<br>
+                        holidays across Southeast Asia, Oceania, South America<br>
+                        Scandinavia, and more you'll be off on a thrilling experience in<br>
+                        timet Learn more about TourRadar's best adventure travel tours<br>
+                        below.</p>
+                    <img src="img/adventure-final.png" alt="logo-finale">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="8th PART">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="final-boxes">
+                    <div class="final-winter-orange-box">
+                    </div>
+                    <div class="final-middle">
+                        <img src="img/middle-final.jpg" alt="middle-final">
+                    </div>
+                    <div class="right-finale">
+                        <img src="img/right-final.jpg" alt="right-final">
+                        <p>Lorem ipsum dolor sit amet<br> consectetur adipisicing elit.<br> Adipisci blanditiis
+                            cupiditate <br>dignissimos dolore eius enim<br> eos et harum impedit nulla <br>odio
+                            perferendis, placeat<br> quia quod rerum ut velit<br> voluptas voluptates.</p>
+                    </div>
+                    <div class="left-finale">
+                        <img src="img/left-final.jpg" alt="lef-finale">
+                        <p>Lorem ipsum dolor sit amet<br> consectetur adipisicing elit.<br> Adipisci blanditiis
+                            cupiditate <br>dignissimos dolore eius enim<br> eos et harum impedit nulla <br>odio
+                            perferendis, placeat<br> quia quod rerum ut velit<br> voluptas voluptates.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="footer-logo">
+        <img src="img/adventure-final.png" alt="footer-logo">
+    </div>
+    <div class="logos">
+        <div class="fb">
+            <img src="img/fb-logo.png" alt="fb">
+        </div>
+        <div class="linkedin">
+            <img src="img/linkedin-logo.png" alt="linkedin">
+        </div>
+        <div class="instagram">
+            <img src="img/insta-logo.png" alt="insta">
+        </div>
+    </div>
+    <div class="final-line">
+    </div>
+    <p class="final-text"><b>Mountain Adventure is a Trekking & Tour</b></p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
